--- a/app/src/main/res/layout/content_add_rating_view.xml
+++ b/app/src/main/res/layout/content_add_rating_view.xml
@@ -252,6 +252,7 @@
 
             <Button
                 android:id="@+id/button"
+                style="@style/AppTheme.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
