--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/item_changename"
-        android:title="Change Name"
+        android:title="Login / Register"
         app:showAsAction="withText"
         android:onClick="changeName"
         />
