--- a/app/src/main/res/layout/content_add_rating_view.xml
+++ b/app/src/main/res/layout/content_add_rating_view.xml
@@ -240,7 +240,7 @@
                 android:textAlignment="center" />
 
             <RatingBar
-                android:id="@+id/rb_overall2"
+                android:id="@+id/rb_expectedoverall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
