--- a/app/src/main/res/layout/content_single_rating.xml
+++ b/app/src/main/res/layout/content_single_rating.xml
@@ -10,10 +10,23 @@
     tools:showIn="@layout/activity_main_view"
     tools:context=".SingleRating">
 
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical" />
+
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </RelativeLayout>
